@@ -1,6 +1,7 @@
 ncmpc 0.35 - not yet released
 * fall back to "AlbumArtist" tag in the default format
 * fix crash with a very narrow terminal window
+* config: allow escaping single quote with backslash in key bindings
 
 ncmpc 0.34 - (2019-04-10)
 * show total duration of range selection in status bar
